Update to recent versions
- Gradle 8.5

These updated versions are supposed to be in sync with current jenkins LTS

- Java 21
- Job-DSL 1.92
- Jenkins 2.504.1
- Jenkins Test-Harness 2447.v8a_ce9e0fca_32