@@ -1,4 +1,12 @@
-apply plugin: 'groovy'
+plugins {
+    id('groovy')
+}
+
+java {
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(21))
+    }
+}
 
 sourceSets {
     jobs {
@@ -13,8 +21,8 @@ sourceSets {
 
 repositories {
     mavenCentral()
-    maven { url 'https://repo.jenkins-ci.org/releases/' }
-    jcenter()
+    // maven { url 'https://repo.jenkins-ci.org/releases/' }
+    maven { url 'https://repo.jenkins-ci.org/public/' }
 }
 
 configurations {
@@ -32,33 +40,27 @@ configurations {
 configurations.all*.exclude group: 'xalan'
 
 dependencies {
-    compile 'org.codehaus.groovy:groovy-all:2.4.11'
-    compile "org.jenkins-ci.plugins:job-dsl-core:${jobDslVersion}"
-    compile 'org.kohsuke:github-api:1.93'
+    implementation platform('org.codehaus.groovy:groovy-bom:2.4.21')
+    implementation 'org.codehaus.groovy:groovy'
 
-    testCompile 'org.spockframework:spock-core:1.3-groovy-2.4'
-    testCompile 'cglib:cglib-nodep:2.2.2' // used by Spock
+    testImplementation platform("org.spockframework:spock-bom:1.3-groovy-2.4")
+    testImplementation "org.spockframework:spock-core"
+
+    implementation "org.jenkins-ci.plugins:job-dsl-core:${jobDslVersion}"
 
     // Jenkins test harness dependencies
-    testCompile('org.jenkins-ci.main:jenkins-test-harness:2.49') {
+    testImplementation("org.jenkins-ci.main:jenkins-test-harness:${jenkinsTestHarnessVersion}") {
         exclude group: 'org.netbeans.modules', module: 'org-netbeans-insane' // https://github.com/sheehan/job-dsl-gradle-example/issues/90
     }
-    testCompile("org.jenkins-ci.main:jenkins-war:${jenkinsVersion}") {
+    testImplementation("org.jenkins-ci.main:jenkins-war:${jenkinsVersion}") {
         exclude group: 'org.jenkins-ci.ui', module: 'bootstrap' // https://github.com/sheehan/job-dsl-gradle-example/issues/87
     }
 
     // Job DSL plugin including plugin dependencies
-    testCompile "org.jenkins-ci.plugins:job-dsl:${jobDslVersion}"
-    testCompile "org.jenkins-ci.plugins:job-dsl:${jobDslVersion}@jar"
-    testCompile 'org.jenkins-ci.plugins:structs:1.20@jar'
-
-    // Plugins to install in test instance
-    testPlugins 'org.jenkins-ci.plugins:cloudbees-folder:5.14'
-    testPlugins 'org.jenkins-ci.plugins:credentials:2.1.10'
-    testPlugins 'org.jenkins-ci.plugins:cvs:2.13'
-    testPlugins 'org.jenkins-ci.plugins:ghprb:1.40.0'
-    testPlugins 'org.jenkins-ci.plugins:token-macro:2.5'
-    testPlugins 'org.jenkins-ci.plugins.workflow:workflow-cps-global-lib:2.7'
+    testImplementation "org.jenkins-ci.plugins:job-dsl:${jobDslVersion}"
+    testImplementation "org.jenkins-ci.plugins:job-dsl:${jobDslVersion}@jar"
+    // testImplementation 'org.jenkins-ci.plugins:structs:338.v848422169819@jar'
+    testImplementation "org.jenkins-ci.plugins:structs:${structsVersion}@jar"
 
     // Run the following script in the Script Console of your Jenkins instance to generate
     // the above testPlugins list. (adapted from https://git.io/fjpUs)
@@ -69,6 +71,14 @@ dependencies {
             .sort()
             .each { println it }
      */
+
+    // Plugins to install in test instance
+    testPlugins 'org.jenkins-ci.plugins:cloudbees-folder:6.1012.v79a_86a_1ea_c1f'
+    testPlugins 'org.jenkins-ci.plugins:credentials:1415.v831096eb_5534'
+    testPlugins 'org.jenkins-ci.plugins:cvs:483.v69a_98dfd973b_'
+    testPlugins 'org.jenkins-ci.plugins:token-macro:444.v52de7e9c573d'
+    testPlugins 'io.jenkins.plugins:pipeline-groovy-lib:752.vdddedf804e72'
+
 }
 
 task resolveTestPlugins(type: Copy) {
@@ -94,4 +104,12 @@ task resolveTestPlugins(type: Copy) {
 test {
     dependsOn tasks.resolveTestPlugins
     inputs.files sourceSets.jobs.groovy.srcDirs
+
+    jvmArgs("--add-opens=java.base/java.util=ALL-UNNAMED",
+            "--add-opens=java.base/java.lang=ALL-UNNAMED",
+            "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED")
+
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
 }
